@@ -106,3 +106,10 @@ tasks.register("copySecret", Copy::class) {
     include("application*.yml")
     into("./src/main/resources/")
 }
+
+tasks.test {
+    jvmArgs(
+        "--add-opens", "java.base/java.time=ALL-UNNAMED",
+        "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
+    )
+}
